--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 
 <body>
